# reqwest-examples

./: Cargo.toml  LICENSE  README.md  hello.txt
src/: application_json.rs  main.rs
test/fixtures/files/: hello.txt
