[package]
name = "reqwest-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = {version = "0.11.18", features = ["json", "multipart", "stream"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.30.0", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"]}
